--- a/.github/workflows/linux_builds.yml
+++ b/.github/workflows/linux_builds.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 jobs:
   linux-sanitizer:
     runs-on: "ubuntu-20.04"
-    name: Editor and exported project with sanitizers (target=debug/release, tools=yes/no, debug_symbols=yes/full, use_ubsan=yes, use_asan=yes)
+    name: Editor and exported project with sanitizers (target=debug/release, tools=yes/no, debug_symbols=yes, use_ubsan=yes, use_asan=yes)
 
     steps:
       - uses: actions/checkout@v2
@@ -54,9 +54,9 @@ jobs:
         run: |
           cd godot
           scons p=x11 -j2 use_asan=yes use_ubsan=yes CCFLAGS="-fsanitize=shift,shift-exponent,integer-divide-by-zero,unreachable,vla-bound,null,return,signed-integer-overflow,bounds,float-divide-by-zero,float-cast-overflow,nonnull-attribute,returns-nonnull-attribute,bool,enum,vptr"
-          scons tools=no target=release debug_symbols=full use_asan=yes use_ubsan=yes CCFLAGS="-fsanitize=shift,shift-exponent,integer-divide-by-zero,unreachable,vla-bound,null,return,signed-integer-overflow,bounds,float-divide-by-zero,float-cast-overflow,nonnull-attribute,returns-nonnull-attribute,bool,enum,vptr"
+          true || scons tools=no target=release debug_symbols=yes use_asan=yes use_ubsan=yes CCFLAGS="-fsanitize=shift,shift-exponent,integer-divide-by-zero,unreachable,vla-bound,null,return,signed-integer-overflow,bounds,float-divide-by-zero,float-cast-overflow,nonnull-attribute,returns-nonnull-attribute,bool,enum,vptr"
           cp bin/godot.x11.tools.64s ../
-          cp bin/godot.x11.opt.64s ../
+          true || cp bin/godot.x11.opt.64s ../
           cd ../
           rm -rf godot
 
@@ -72,12 +72,12 @@ jobs:
           DRI_PRIME=0 xvfb-run ./godot.x11.tools.64s 60 --video-driver GLES3 --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
           misc/check_ci_log.py sanitizers_log.txt
 
-      # Export project and run it to check for possible leaks and invalid memory usage
-      - name: Exporting and running project
-        run: |
-          curr="$(pwd)/godot.x11.opt.64s"
-          sed -i "s|PATH_TO_CHANGE|$curr|" export_presets.cfg
-          DRI_PRIME=0 xvfb-run ./godot.x11.tools.64s --export-debug "Linux/X11" test_project 2>&1 | tee sanitizers_log.txt || true
-          misc/check_ci_log.py sanitizers_log.txt
-          DRI_PRIME=0 xvfb-run ./test_project 20 2>&1 | tee sanitizers_log.txt || true
-          misc/check_ci_log.py sanitizers_log.txt
+#      # Export project and run it to check for possible leaks and invalid memory usage
+#      - name: Exporting and running project
+#        run: |
+#          curr="$(pwd)/godot.x11.opt.64s"
+#          sed -i "s|PATH_TO_CHANGE|$curr|" export_presets.cfg
+#          DRI_PRIME=0 xvfb-run ./godot.x11.tools.64s --export-debug "Linux/X11" test_project 2>&1 | tee sanitizers_log.txt || true
+#          misc/check_ci_log.py sanitizers_log.txt
+#          DRI_PRIME=0 xvfb-run ./test_project 20 2>&1 | tee sanitizers_log.txt || true
+#          misc/check_ci_log.py sanitizers_log.txt
