--- a/.github/workflows/linux_builds_1h.yml
+++ b/.github/workflows/linux_builds_1h.yml
@@ -63,13 +63,13 @@ jobs:
       - name: Use Godot
         run: |
           echo "-------------------- OPEN EDITOR TO IMPORT PROJECT -----------------------"
-          DRI_PRIME=0 timeout 25s xvfb-run ./godot.x11.tools.64s -e --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
+          DRI_PRIME=0 timeout 25s xvfb-run ./godot.x11.tools.64s --audio-driver Dummy -e --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
           misc/check_ci_log.py sanitizers_log.txt
           echo "-------------------- OPEN EDITOR SECOND TIME TO BE SURE THAT EVERYTHING WAS IMPORTED -----------------------"
-          DRI_PRIME=0 xvfb-run ./godot.x11.tools.64s -e -q --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
+          DRI_PRIME=0 xvfb-run ./godot.x11.tools.64s --audio-driver Dummy -e -q --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
           misc/check_ci_log.py sanitizers_log.txt
           echo "-------------------- RUN PROJECT -----------------------"
-          DRI_PRIME=0 xvfb-run ./godot.x11.tools.64s 3600 --video-driver GLES3 --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
+          DRI_PRIME=0 xvfb-run ./godot.x11.tools.64s 3600 --audio-driver Dummy --video-driver GLES3 --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
           misc/check_ci_log.py sanitizers_log.txt
 
 #      # Export project and run it to check for possible leaks and invalid memory usage
