--- a/.github/workflows/linux_builds_1m_max.yml
+++ b/.github/workflows/linux_builds_1m_max.yml
@@ -1,4 +1,4 @@
-name: 🐧 Linux Builds
+name: 🐧 Linux Builds Stress 1m
 on: [push, pull_request]
 
 jobs:
@@ -62,15 +62,16 @@ jobs:
 
       - name: Use Godot
         run: |
+          sed -i "s|NUMBER_OF_INSTANCES : int = 1|NUMBER_OF_INSTANCES : int = 10|" Start.gd
           echo "-------------------- OPEN EDITOR TO IMPORT PROJECT -----------------------"
           DRI_PRIME=0 timeout 25s xvfb-run ./godot.x11.tools.64s --audio-driver Dummy -e --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
-          misc/check_ci_log.py sanitizers_log.txt
+          misc/check_ci_log.py sanitizers_log.txt || true
           echo "-------------------- OPEN EDITOR SECOND TIME TO BE SURE THAT EVERYTHING WAS IMPORTED -----------------------"
           DRI_PRIME=0 xvfb-run ./godot.x11.tools.64s --audio-driver Dummy -e -q --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
-          misc/check_ci_log.py sanitizers_log.txt
+          misc/check_ci_log.py sanitizers_log.txt || true
           echo "-------------------- RUN PROJECT -----------------------"
           DRI_PRIME=0 xvfb-run ./godot.x11.tools.64s 60 --audio-driver Dummy --video-driver GLES3 --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
-          misc/check_ci_log.py sanitizers_log.txt
+          misc/check_ci_log.py sanitizers_log.txt || true
 
 #      # Export project and run it to check for possible leaks and invalid memory usage
 #      - name: Exporting and running project
