--- a/.github/workflows/stress.yml
+++ b/.github/workflows/stress.yml
@@ -1,4 +1,4 @@
-name: 🐧 Linux Builds Stress 1m
+name: 🐧 Stress 2h
 on: [push, pull_request]
 
 jobs:
@@ -70,7 +70,7 @@ jobs:
           DRI_PRIME=0 xvfb-run ./godot.x11.tools.64s --audio-driver Dummy -e -q --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
           misc/check_ci_log.py sanitizers_log.txt || true
           echo "-------------------- RUN PROJECT -----------------------"
-          DRI_PRIME=0 xvfb-run ./godot.x11.tools.64s 60 --audio-driver Dummy --video-driver GLES3 --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
+          DRI_PRIME=0 xvfb-run ./godot.x11.tools.64s 7200 --audio-driver Dummy --video-driver GLES3 --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
           misc/check_ci_log.py sanitizers_log.txt || true
 
 #      # Export project and run it to check for possible leaks and invalid memory usage
