--- a/.github/workflows/required.yml
+++ b/.github/workflows/required.yml
@@ -47,7 +47,7 @@ jobs:
         run: |
           git clone https://github.com/godotengine/godot.git
           cd godot
-          git checkout 3.2
+          git checkout 3.x
           cd ../
 
       - name: Compile Godot
