--- a/.github/workflows/linux_builds_swiftshader_1h.yml
+++ b/.github/workflows/linux_builds_swiftshader_1h.yml
@@ -1,4 +1,4 @@
-name: 🐧 SwiftShader Required
+name: 🐧 SwiftShader Long 1h
 on: [push, pull_request]
 
 jobs:
@@ -68,5 +68,5 @@ jobs:
           VK_ICD_FILENAMES=$(pwd)/vk_swiftshader_icd.json DRI_PRIME=0 xvfb-run ./godot.linuxbsd.tools.64s --audio-driver Dummy -e -q --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
           misc/check_ci_log.py sanitizers_log.txt
           echo "-------------------- RUN PROJECT -----------------------"
-          VK_ICD_FILENAMES=$(pwd)/vk_swiftshader_icd.json DRI_PRIME=0 xvfb-run ./godot.linuxbsd.tools.64s 60 --audio-driver Dummy --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
+          VK_ICD_FILENAMES=$(pwd)/vk_swiftshader_icd.json DRI_PRIME=0 xvfb-run ./godot.linuxbsd.tools.64s 3600 --audio-driver Dummy --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
           misc/check_ci_log.py sanitizers_log.txt
