--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,18 +8,22 @@ export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path=""
-patch_list=PoolStringArray(  )
+encryption_include_filters=""
+encryption_exclude_filters=""
+encrypt_pck=false
+encrypt_directory=false
 script_export_mode=1
 script_encryption_key=""
 
 [preset.0.options]
 
+custom_template/debug="PATH_TO_CHANGE"
+custom_template/release=""
+binary_format/64_bits=true
+binary_format/embed_pck=false
 texture_format/bptc=false
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
-binary_format/64_bits=true
-binary_format/embed_pck=false
-custom_template/release=""
-custom_template/debug="PATH_TO_CHANGE"
+
