--- a/.github/workflows/exported.yml
+++ b/.github/workflows/exported.yml
@@ -56,26 +56,21 @@ jobs:
           scons p=x11 -j2 use_asan=yes use_ubsan=yes CCFLAGS="-fsanitize=shift,shift-exponent,integer-divide-by-zero,unreachable,vla-bound,null,return,signed-integer-overflow,bounds,float-divide-by-zero,float-cast-overflow,nonnull-attribute,returns-nonnull-attribute,bool,enum,vptr"
           cp bin/godot.x11.tools.64s ../
           git clean -xqdf
-          scons tools=no target=release debug_symbols=yes use_asan=yes use_ubsan=yes optimize=none CCFLAGS="-fsanitize=shift,shift-exponent,integer-divide-by-zero,unreachable,vla-bound,null,return,signed-integer-overflow,bounds,float-divide-by-zero,float-cast-overflow,nonnull-attribute,returns-nonnull-attribute,bool,enum,vptr"
+          scons tools=no target=release debug_symbols=yes use_asan=yes use_ubsan=yes optimize=none CCFLAGS="-DDEBUG_METHODS_ENABLED -fsanitize=shift,shift-exponent,integer-divide-by-zero,unreachable,vla-bound,null,return,signed-integer-overflow,bounds,float-divide-by-zero,float-cast-overflow,nonnull-attribute,returns-nonnull-attribute,bool,enum,vptr"
           cp bin/godot.x11.opt.64s ../
           cd ../
           rm -rf godot
 
-      - name: Use Godot
-        run: |
-          echo "-------------------- OPEN EDITOR TO IMPORT PROJECT -----------------------"
-          DRI_PRIME=0 xvfb-run ./godot.x11.tools.64s --audio-driver Dummy -e -q --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
-          misc/check_ci_log.py sanitizers_log.txt
-          echo "-------------------- RUN PROJECT -----------------------"
-          DRI_PRIME=0 xvfb-run ./godot.x11.tools.64s 3600 --audio-driver Dummy --video-driver GLES3 --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
-          misc/check_ci_log.py sanitizers_log.txt
-
-      # Export project and run it to check for possible leaks and invalid memory usage
-      - name: Exporting and running project
+      # Export project to check for possible leaks and invalid memory usage
+      - name: Exporting project
         run: |
           curr="$(pwd)/godot.x11.opt.64s"
           sed -i "s|PATH_TO_CHANGE|$curr|" export_presets.cfg
-          DRI_PRIME=0 xvfb-run ./godot.x11.tools.64s --export-debug "Linux/X11" test_project 2>&1 | tee sanitizers_log.txt || true
+          DRI_PRIME=0 xvfb-run ./godot.x11.tools.64s --audio-driver Dummy --export-debug "Linux/X11" test_project 2>&1 | tee sanitizers_log.txt || true
           misc/check_ci_log.py sanitizers_log.txt
+
+      # Run project to check for possible leaks and invalid memory usage
+      - name: Running project
+        run: |
           DRI_PRIME=0 xvfb-run ./test_project 3600 --audio-driver Dummy 2>&1 | tee sanitizers_log.txt || true
           misc/check_ci_log.py sanitizers_log.txt
