--- a/.github/workflows/stress.yml
+++ b/.github/workflows/stress.yml
@@ -47,7 +47,7 @@ jobs:
         run: |
           git clone https://github.com/godotengine/godot.git
           cd godot
-          git checkout 3.x
+          git checkout 3.3
           cd ../
 
       - name: Compile Godot
@@ -60,15 +60,17 @@ jobs:
           cd ../
           rm -rf godot
 
-      - name: Use Godot
+      - name: Open and close editor
         run: |
           sed -i "s|NUMBER_OF_INSTANCES : int = 1|NUMBER_OF_INSTANCES : int = 10|" Start.gd
-          echo "-------------------- OPEN EDITOR TO IMPORT PROJECT -----------------------"
           DRI_PRIME=0 xvfb-run ./godot.x11.tools.64s --audio-driver Dummy -e -q --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
-          misc/check_ci_log.py sanitizers_log.txt || true
-          echo "-------------------- RUN PROJECT -----------------------"
-          DRI_PRIME=0 xvfb-run ./godot.x11.tools.64s 7200 --audio-driver Dummy --video-driver GLES3 --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
-          misc/check_ci_log.py sanitizers_log.txt || true
+          misc/check_ci_log.py sanitizers_log.txt
+
+      - name: Test project
+        run: |
+          DRI_PRIME=0 xvfb-run ./godot.x11.tools.64s 60 --audio-driver Dummy --video-driver GLES3 --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
+          misc/check_ci_log.py sanitizers_log.txt
+
 
 #      # Export project and run it to check for possible leaks and invalid memory usage
 #      - name: Exporting and running project
