--- a/.github/workflows/required.yml
+++ b/.github/workflows/required.yml
@@ -41,7 +41,7 @@ jobs:
         run: |
           git clone https://github.com/godotengine/godot.git
           cd godot
-          git checkout 3.x
+          git checkout 3.3
           cd ../
 
       - name: Compile Godot
