--- a/.github/workflows/long.yml
+++ b/.github/workflows/long.yml
@@ -1,5 +1,9 @@
 name: 🐧 Long 1h
-on: [push, pull_request]
+on: 
+  push:
+  pull_request:
+  schedule:
+    - cron: '0 0 * * *'
 
 jobs:
   linux-sanitizer:
@@ -60,12 +64,13 @@ jobs:
           cd ../
           rm -rf godot
 
-      - name: Use Godot
+      - name: Open Godot
         run: |
-          echo "-------------------- OPEN EDITOR TO IMPORT PROJECT -----------------------"
           DRI_PRIME=0 xvfb-run ./godot.x11.tools.64s --audio-driver Dummy -e -q --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
           misc/check_ci_log.py sanitizers_log.txt
-          echo "-------------------- RUN PROJECT -----------------------"
+
+      - name: Use Godot
+        run: |
           DRI_PRIME=0 xvfb-run ./godot.x11.tools.64s 3600 --audio-driver Dummy --video-driver GLES3 --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
           misc/check_ci_log.py sanitizers_log.txt
 
