--- a/.github/workflows/thread_sanitizer.yml
+++ b/.github/workflows/thread_sanitizer.yml
@@ -1,5 +1,9 @@
 name: 🐧 Thread Sanitizer 1h
-on: [push, pull_request]
+on: 
+  push:
+  pull_request:
+  schedule:
+    - cron: '0 0 * * *'
 
 jobs:
   linux-sanitizer:
@@ -58,12 +62,13 @@ jobs:
           cd ../
           rm -rf godot
 
+      - name: Open and close editor
+        run: |
+          DRI_PRIME=0 xvfb-run ./godot.x11.tools.64.llvms --audio-driver Dummy -e -q --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
+          
       - name: Use Godot
         run: |
           sed -i "s|NUMBER_OF_INSTANCES : int = 1|NUMBER_OF_INSTANCES : int = 10|" Start.gd
-          echo "-------------------- OPEN EDITOR TO IMPORT PROJECT -----------------------"
-          DRI_PRIME=0 xvfb-run ./godot.x11.tools.64.llvms --audio-driver Dummy -e -q --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
-          echo "-------------------- RUN PROJECT -----------------------"
           DRI_PRIME=0 xvfb-run ./godot.x11.tools.64.llvms 3600 --audio-driver Dummy --video-driver GLES3 --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
 
 #      # Export project and run it to check for possible leaks and invalid memory usage
