--- a/.github/workflows/long.yml
+++ b/.github/workflows/long.yml
@@ -51,7 +51,7 @@ jobs:
         run: |
           git clone https://github.com/godotengine/godot.git
           cd godot
-          git checkout 3.x
+          git checkout 3.4
           cd ../
 
       - name: Compile Godot
