--- a/.github/workflows/required.yml
+++ b/.github/workflows/required.yml
@@ -27,6 +27,7 @@ jobs:
             libxinerama-dev libgl1-mesa-dev libglu-dev libasound2-dev libpulse-dev libudev-dev libxi-dev libxrandr-dev yasm \
             xvfb wget2 unzip python scons git
 
+# Allows to test project with precompiled binaries
 #      - name: Download Godot
 #        run: |
 #          wget2 https://downloads.tuxfamily.org/godotengine/3.2.4/beta1/Godot_v3.2.4-beta1_x11.64.zip
@@ -63,11 +64,11 @@ jobs:
 
       - name: Test project
         run: |
-          DRI_PRIME=0 xvfb-run ./godot.x11.tools.64s 60 --audio-driver Dummy --video-driver GLES3 --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
+          DRI_PRIME=0 xvfb-run ./godot.x11.tools.64s 180 --audio-driver Dummy --video-driver GLES3 --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
           misc/check_ci_log.py sanitizers_log.txt
 
-      - uses: actions/upload-artifact@v2
-        with:
-          name: ${{ github.job }}
-          path: godot.x11.tools.64s
-          retention-days: 14
+#      - uses: actions/upload-artifact@v2
+#        with:
+#          name: ${{ github.job }}
+#          path: godot.x11.tools.64s
+#          retention-days: 14
