--- a/.github/workflows/linux_builds_swiftshader.yml
+++ b/.github/workflows/linux_builds_swiftshader.yml
@@ -23,20 +23,6 @@ jobs:
             libxinerama-dev libgl1-mesa-dev libglu-dev libasound2-dev libpulse-dev libudev-dev libxi-dev libxrandr-dev yasm \
             xvfb wget2 unzip python scons git
 
-#      - name: Download Godot
-#        run: |
-#          wget2 https://archive.hugo.pro/builds/godot/master/editor/godot-linux-nightly-x86_64.zip
-#          unzip godot-linux-nightly-x86_64.zip
-#          rm godot-linux-nightly-x86_64.zip
-#          mv godot godot.linuxbsd.tools.64s
-
-#      - name: Download Godot(ZIP)
-#        run: |
-#          wget2 https://github.com/godotengine/godot/archive/3.2.zip
-#          unzip 3.2.zip
-#          rm 3.2.zip
-
-
       - name: Download Godot(GIT)
         run: |
           git clone https://github.com/godotengine/godot.git
@@ -55,15 +41,14 @@ jobs:
       # Download, unzip and setup SwiftShader library
       - name: Download SwiftShader
         run: |
-          wget https://github.com/qarmin/gtk_library_store/releases/download/3.24.0/swiftshader.zip
-          unzip swiftshader.zip
-          rm swiftshader.zip
+          wget https://github.com/godotengine/regression-test-project/releases/download/_ci-deps/swiftshader-ubuntu20.04-20211002.zip
+          unzip swiftshader-ubuntu20.04-20211002.zip
           curr="$(pwd)/libvk_swiftshader.so"
           sed -i "s|PATH_TO_CHANGE|$curr|" vk_swiftshader_icd.json
 
       - name: Open Editor
         run: |
-          VK_ICD_FILENAMES=$(pwd)/vk_swiftshader_icd.json DRI_PRIME=0 xvfb-run ./godot.linuxbsd.tools.64.san --audio-driver Dummy -e -q --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
+          VK_ICD_FILENAMES=$(pwd)/vk_swiftshader_icd.json DRI_PRIME=0 xvfb-run ./godot.linuxbsd.tools.64.san --audio-driver Dummy -e --quit --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
           misc/check_ci_log.py sanitizers_log.txt
 
       - name: Run Project
