--- a/.github/workflows/linux_builds_swiftshader.yml
+++ b/.github/workflows/linux_builds_swiftshader.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           cd godot
           scons p=linuxbsd -j2 use_asan=yes use_ubsan=yes CCFLAGS="-fsanitize=shift,shift-exponent,integer-divide-by-zero,unreachable,vla-bound,null,return,signed-integer-overflow,bounds,float-divide-by-zero,float-cast-overflow,nonnull-attribute,returns-nonnull-attribute,bool,enum,vptr"
-          cp bin/godot.linuxbsd.tools.64.san ../
+          cp bin/godot.linuxbsd.tools.x86_64.san ../
           cd ../
           rm -rf godot
 
@@ -48,10 +48,14 @@ jobs:
 
       - name: Open Editor
         run: |
-          VK_ICD_FILENAMES=$(pwd)/vk_swiftshader_icd.json DRI_PRIME=0 xvfb-run ./godot.linuxbsd.tools.64.san --audio-driver Dummy -e --quit --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
+          VK_ICD_FILENAMES=$(pwd)/vk_swiftshader_icd.json DRI_PRIME=0 xvfb-run ./godot.linuxbsd.tools.x86_64.san --audio-driver Dummy -e --quit --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
           misc/check_ci_log.py sanitizers_log.txt
 
       - name: Run Project
         run: |
-          VK_ICD_FILENAMES=$(pwd)/vk_swiftshader_icd.json DRI_PRIME=0 xvfb-run ./godot.linuxbsd.tools.64.san 180 --audio-driver Dummy --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
+          VK_ICD_FILENAMES=$(pwd)/vk_swiftshader_icd.json DRI_PRIME=0 xvfb-run ./godot.linuxbsd.tools.x86_64.san 180 --audio-driver Dummy --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
           misc/check_ci_log.py sanitizers_log.txt
+
+      - name: Run Project GLES3
+        run: |
+          DRI_PRIME=0 xvfb-run ./godot.linuxbsd.tools.x86_64.san 180 --rendering-driver opengl3 --audio-driver Dummy --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
