--- a/.github/workflows/linux_builds_swiftshader.yml
+++ b/.github/workflows/linux_builds_swiftshader.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 jobs:
   vulkan-normal:
     runs-on: "ubuntu-20.04"
-    name: Editor and exported project with sanitizers (target=debug/release, tools=yes/no, debug_symbols=yes, use_ubsan=yes, use_asan=yes)
+    name: Editor and exported project with sanitizers (target=debug, dev_build=yes, use_ubsan=yes, use_asan=yes)
 
     steps:
       - uses: actions/checkout@v2
@@ -33,8 +33,8 @@ jobs:
       - name: Compile Godot
         run: |
           cd godot
-          scons p=linuxbsd -j2 use_asan=yes use_ubsan=yes CCFLAGS="-fsanitize=shift,shift-exponent,integer-divide-by-zero,unreachable,vla-bound,null,return,signed-integer-overflow,bounds,float-divide-by-zero,float-cast-overflow,nonnull-attribute,returns-nonnull-attribute,bool,enum,vptr"
-          cp bin/godot.linuxbsd.tools.x86_64.san ../
+          scons -j2 dev_build=yes target=editor use_asan=yes use_ubsan=yes linker=gold
+          cp bin/godot.linuxbsd.editor.dev.x86_64.san ../
           cd ../
           rm -rf godot
 
@@ -48,14 +48,14 @@ jobs:
 
       - name: Open Editor
         run: |
-          VK_ICD_FILENAMES=$(pwd)/vk_swiftshader_icd.json DRI_PRIME=0 xvfb-run ./godot.linuxbsd.tools.x86_64.san --audio-driver Dummy -e --quit --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
+          VK_ICD_FILENAMES=$(pwd)/vk_swiftshader_icd.json DRI_PRIME=0 xvfb-run ./godot.linuxbsd.editor.dev.x86_64.san --audio-driver Dummy -e --quit --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
           misc/check_ci_log.py sanitizers_log.txt
 
       - name: Run Project
         run: |
-          VK_ICD_FILENAMES=$(pwd)/vk_swiftshader_icd.json DRI_PRIME=0 xvfb-run ./godot.linuxbsd.tools.x86_64.san 180 --audio-driver Dummy --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
+          VK_ICD_FILENAMES=$(pwd)/vk_swiftshader_icd.json DRI_PRIME=0 xvfb-run ./godot.linuxbsd.editor.dev.x86_64.san 180 --audio-driver Dummy --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
           misc/check_ci_log.py sanitizers_log.txt
 
       - name: Run Project GLES3
         run: |
-          DRI_PRIME=0 xvfb-run ./godot.linuxbsd.tools.x86_64.san 180 --rendering-driver opengl3 --audio-driver Dummy --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
+          DRI_PRIME=0 xvfb-run ./godot.linuxbsd.editor.dev.x86_64.san 180 --rendering-driver opengl3 --audio-driver Dummy --path $(pwd) 2>&1 | tee sanitizers_log.txt || true
